Feat/channel telemetry (#18)
* added sfc-channel value telemetry delivery, to quickly check in the control plane what data and what values are read.

* channel viz detail and csv download

* channel telemetry viz frequency update
